[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["Rascal_Two <therealrascaltwo@gmail.com>"]
description = ""
name = "questdrive-syncer"
readme = "README.md"
version = "1.1.1"

[tool.poetry.dependencies]
httpx = "^0.26.0"
pytest-network = "^0.0.1"
python = "^3.9"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
pre-commit = "^3.6.0"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
pytest-httpx = "^0.28.0"
ruff = "^0.1.9"
typeguard = "^4.1.5"
