[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.bandit]
skips = ["B101"]

[tool.docformatter]
wrap-summaries = 999

[tool.poetry]
authors = ["Rascal_Two <therealrascaltwo@gmail.com>"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.9",
  "Topic :: Communications :: File Sharing",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Utilities",
  "Typing :: Typed"
]
description = "A tool to sync files from a device running QuestDrive to a local directory."
keywords = ["questdrive", "httpx"]
license = "MIT"
name = "questdrive-syncer"
readme = "README.md"
version = "2.5.6"

[tool.poetry.dependencies]
httpx = "^0.26.0"
python = "^3.9"
rich = "^13.7.0"
rich-argparse = "^1.4.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
pre-commit = "^3.6.0"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
pytest-httpx = "^0.28.0"
pytest-mock = "^3.12.0"
pytest-network = "^0.0.1"
ruff = "^0.1.9"
typeguard = "^4.1.5"

[tool.poetry.urls]
repository = "https://github.com/RascalTwo/QuestDrive-Syncer"
